--- a/gc/index.html
+++ b/gc/index.html
@@ -368,6 +368,11 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionOne">
                         <div class="accordion-body">
                             By the end of each month, Games Converse will disclose the profit achieved and the donation's deposit receipt. Visit the <a href="https://www.black-jaguar.org/" target="_blank">Black Jaguar Foundation</a>'s website for more information.
+                            <div class="embedresize">
+                                <div>
+                                <iframe allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/O209XqBZVE0" width="560"></iframe>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div> <!-- end of item -->
