--- a/gc/index.html
+++ b/gc/index.html
@@ -648,7 +648,7 @@
                                <a class="white" href="http://www.gamesforchange.org/">Games for Change</a>
                             </li>
                             <li class="media">
-                                <a class="white" href="https://gameimpact.fr/">Game Impact</a>
+                                <a class="white" href="xxxxxhttps://gameimpact.fr/">More to come</a>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
