--- a/gc/index.html
+++ b/gc/index.html
@@ -370,7 +370,7 @@
                             By the end of each month, Games Converse will disclose the profit achieved and the donation's deposit receipt. Visit the <a href="https://www.black-jaguar.org/" target="_blank">Black Jaguar Foundation</a>'s website for more information.
                             <div class="embedresize">
                                 <div>
-                                <iframe allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/O209XqBZVE0" width="560"></iframe>
+                                    <iframe width="200" height="100" src="https://www.youtube.com/embed/gg6W_eTJdsQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
