--- a/gc/index.html
+++ b/gc/index.html
@@ -346,7 +346,7 @@
                 </div>
             </div>
 		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2">
-
+<img src="../gc/images/bjf_logo.PNG">
             <!-- Accordion -->
             <div class="accordion-container" id="accordionOne">
                 <h2>Let's reforest the Amazon rainforest with Black Jaguar Foundation</h2>
