--- a/gc/index.html
+++ b/gc/index.html
@@ -346,9 +346,9 @@
                 </div>
             </div>
 		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2">
-<img src="../gc/images/bjf_logo.PNG">
             <!-- Accordion -->
             <div class="accordion-container" id="accordionOne">
+                <center><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></center>
                 <h2>Let's reforest the Amazon rainforest with Black Jaguar Foundation</h2>
                 <div class="item">
                     <div id="headingOne">
