--- a/gc/index.html
+++ b/gc/index.html
@@ -339,7 +339,8 @@
 
     <!-- Details 1 -->
 	<div id="details" class="accordion">
-	<!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2">
+		<div id="projects" class="area-1">
+            
             <!-- Accordion -->
             <div class="accordion-container" id="accordionOne">
                 <center><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></center>
