--- a/gc/index.html
+++ b/gc/index.html
@@ -340,12 +340,13 @@
     <!-- Details 1 -->
 	<div id="details" class="accordion">
 		<div id="projects" class="area-1">
+            <center><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></center>
             <div class="embedresize">
                 <div>
                     <iframe width="800" height="400" src="https://www.youtube.com/embed/gg6W_eTJdsQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
-		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><center><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></center><div class="area-2">
+		</div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2">
             <!-- Accordion -->
             <div class="accordion-container" id="accordionOne">
                 <h2>Let's reforest the Amazon rainforest with Black Jaguar Foundation</h2>
