--- a/gc/index.html
+++ b/gc/index.html
@@ -340,7 +340,9 @@
     <!-- Details 1 -->
 	<div id="details" class="accordion">
 		<div id="projects" class="area-1">
-          <!--  <center><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></center>-->
+         <center><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></center>
+         <br>
+         <br>
             <div class="embedresize">
                 <div>
                     <iframe width="1000" height="1000" src="https://www.youtube.com/embed/gg6W_eTJdsQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
