--- a/gc/index.html
+++ b/gc/index.html
@@ -340,7 +340,7 @@
     <!-- Details 1 -->
 	<div id="details" class="accordion">
 		<div id="projects" class="area-1">
-         <center><a href="https://www.black-jaguar.org/" target="_blank"></a><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></center>
+         <center><a href="https://www.black-jaguar.org/" target="_blank"><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></a></center>
          <br>
          <br>
             <div class="embedresize">
