--- a/gc/index.html
+++ b/gc/index.html
@@ -662,7 +662,7 @@
                         <h4>Partners</h4>
                         <ul class="list-unstyled li-space-lg">
                             <li>
-                                <a class="white" href="#your-link">unicorns.com</a>
+                                <a class="white" href="https://www.black-jaguar.org/" target="_blank">Black Jaguar Foundation</a>
                             </li>
                             <li>
                                 <a class="white" href="#your-link">staffmanager.com</a>
@@ -677,7 +677,7 @@
         </div> <!-- end of container -->
     </div> <!-- end of footer -->  
     <!-- end of footer -->
-
+ 
 
     <!-- Copyright -->
     <div class="copyright">
