--- a/gc/index.html
+++ b/gc/index.html
@@ -449,7 +449,7 @@
                                         <img class="card-image" src="images/avatar_unknown_2.png" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">"We couldn’t be more excited to see environmentalism & gaming coming together in this exciting and interesting way."</div>
-                                            <div class="testimonial-author">Joël Boele (Environmental Geographer)</div>
+                                            <div class="testimonial-author">Joël Boele - Environmental Geographer</div>
                                         </div>
                                     </div>        
                                 </div> <!-- end of swiper-slide -->
@@ -460,8 +460,8 @@
                                     <div class="card">
                                         <img class="card-image" src="images/avatar_unknown_3.png" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">To be announced soon.</div>
-                                            <div class="testimonial-author">Player's name - Player - Location</div>
+                                            <div class="testimonial-text">I like a lot this project, because it can help the world while you are having fun with a game. Good luck!</div>
+                                            <div class="testimonial-author">Camila Suarez - Game Designer</div>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
