--- a/gc/index.html
+++ b/gc/index.html
@@ -461,7 +461,7 @@
                                         <img class="card-image" src="images/avatar_unknown_3.png" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">I like a lot this project, because it can help the world while you are having fun with a game. Good luck!</div>
-                                            <div class="testimonial-author">Camila Suarez - Game Designer</div>
+                                            <div class="testimonial-author">Camila Suarez - Gamer</div>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
