--- a/gc/index.html
+++ b/gc/index.html
@@ -662,7 +662,7 @@
                         <h4>Partners</h4>
                         <ul class="list-unstyled li-space-lg">
                             <li>
-                                <a class="white" href="https://www.black-jaguar.org/" target="_blank">Black Jaguar Foundation</a>
+                                <a class="white" href="https://www.black-jaguar.org/" target="_blank"><img src="../gc/images/bjf_logo.PNG" width="64px" height="64px"></a>
                             </li>
                             <li>
                                 <a class="white" href="#your-link">staffmanager.com</a>
