--- a/gc/index.html
+++ b/gc/index.html
@@ -641,7 +641,7 @@
                 
                 <div class="col-md-2">
                     <div class="text-container">
-                        <h4>Tools</h4>
+                        <h4>Our Inspirations</h4>
                         <ul class="list-unstyled li-space-lg">
                             <li>
                                 <a class="white" href="https://playing4theplanet.org/">Playing for the Planet</a>
