--- a/gc/index.html
+++ b/gc/index.html
@@ -155,7 +155,7 @@
                             animal rights issues through the gameplay. Users can play any of the available games and unlock new games by accumulating or buying coins. 
                             They may also customize their avatar to look stylish and join a healthy competition with friends!</p>
                         <p class="testimonial-text">"Our mission is to bring hope and reflection on pressing issues such as deforestation, ocean pollution, animal cruelty and such."</p>
-                        <div class="testimonial-author">Nielisson Mendonça - CEO</div>
+                        <div class="testimonial-author">Nielisson Mendonça - Founder</div>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
@@ -424,8 +424,8 @@
                                     <div class="card">
                                         <img class="card-image" src="images/avatar_unknown_0.png" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">To be announced soon. </div>
-                                            <div class="testimonial-author">Name - Position - NGO</div>
+                                            <div class="testimonial-text">"These games and this mission are contributing to a better world - people having fun while learning about the environment!"</div>
+                                            <div class="testimonial-author">Samantha Bingaman - Graduate Research Assistant at Center for Research in Wind</div>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
@@ -436,7 +436,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/avatar_unknown_4.png" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">All our games are made with love to spread hope of a better future. </div>
+                                            <div class="testimonial-text">"All our games are made with love to spread hope of a better future."</div>
                                             <div class="testimonial-author">Nielisson Mendonça - Founder</div>
                                         </div>
                                     </div>        
