--- a/gc/index.html
+++ b/gc/index.html
@@ -422,10 +422,10 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/avatar_unknown_0.png" alt="alternative">
+                                        <img class="card-image" src="images/testimonials/samantha.jpg" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">"These games and this mission are contributing to a better world - people having fun while learning about the environment!"</div>
-                                            <div class="testimonial-author">Samantha Bingaman - Graduate Research Assistant at Center for Research in Wind</div>
+                                            <div class="testimonial-author">Samantha Bingaman - Environmental Social Scientist</div>
                                         </div>
                                     </div>
                                 </div> <!-- end of swiper-slide -->
